# elmental

./: .gitignore  CHANGELOG.md  LICENSE  README.md  elmental.cabal  flake.nix
.github/workflows/: nix-build.yml
app/: Main.hs
src/: Elmental.hs
src/Elmental/: ElmStructure.hs  Extract.hs  Generate.hs  GenerationSpec.hs
test/: Generate.hs  GenerateMain.hs  Main.hs  SampleTypes.hs
test-app/: default.nix  elm-srcs.nix  elm.json
test-app/src/: Main.elm  MyBase64.elm
test-output/codegen/golden/: SampleTypes.txt
test-output/extraction/golden/: CountryCode.txt  EmptyAlias.txt  Form_Report.txt  Form_Submission.txt  HKTWithSpecializedKindStarparams_Int_Text_Maybe.txt  HKTWithUnspecializedParams_(Either_Int).txt  LargeRecord.txt  MonomorphicRecursiveType.txt  NatPhantomparameter_3.txt  PolymorphicRecursiveType.txt  RecordWithMultipleConstructors.txt  SimpleHKT_Maybe.txt  SimpleRecord.txt  SimpleRecordAlias.txt  SimpleType.txt
test/Codegen/: SampleTypes.hs
